--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>S</span>atyam <span>M</span>ulti-<span>M</span>edia <span>H</span>ouse</h1>
+            <img src="logofm.png">
           </a>
         </div>
         <div class="nav-list">
