--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-  <!-- Header -->
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
+        <div class="brand">
+          <a href="#hero">
             <img src="logofm.png">
         </div>
         <div class="nav-list">
