--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <img src="logofm.png">
+            <img src="log.png">
         </div>
         <div class="nav-list">
           <div class="hamburger">
