--- a/index.html
+++ b/index.html
@@ -16,17 +16,13 @@
           <a href="#hero">
             <img src="log.png">
         </div>
-        <div class="nav-list">
-          <div class="hamburger">
-          </div>
-      </div>
     </div>
   </section>
   <!-- End Header -->
 
 
-  <!-- Hero Section  -->
-  <section id="hero">
+ 
+  <section id="main">
     <div class="hero container">
       <div>
         <h1>Welcome to <span></span></h1>
