--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     </div>
   </section>
   <!-- End Header -->
-
-
- 
-  <section id="main">
+  <section id="hero">
     <div class="hero container">
       <div>
         <h1>Welcome to <span></span></h1>
