--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero">
-            <img src="log.png">
+            <img src="logofm.png">
         </div>
     </div>
   </section>
