--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-            <img src="logofm.png">
+            <img src="logofm.png" max-width="100%" width="200px" height="auto">
         </div>
     </div>
   </section>
