--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Radio Adhyatma Jyoti</title>
+  <title>Radio Adhyatma Jyoti 104.8 MHz </title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-            <img src="logofm.png" max-width="100%" width="200px" height="auto">
+            <a href="" class="logo"><img src="img/logofm.png" alt="Radio Adhyatma Jyoti 104.8 MHz"></a>
         </div>
     </div>
   </section>
